@@ -9,16 +9,20 @@ int LoadCPalette(const std::string &file);
 
 
 // hotkey definitions
-const int HK_MAX = 33;
+
 
 enum HOTKEY { HK_CHEAT_MENU, HK_BIND_STATE, HK_LOAD_LUA, HK_TOGGLE_BG,
 	HK_SAVE_STATE, HK_FDS_SELECT, HK_LOAD_STATE, HK_FDS_EJECT ,
+	HK_VS_INSERT_COIN, HK_VS_TOGGLE_DIPSWITCH,
 	HK_TOGGLE_FRAME_DISPLAY, HK_TOGGLE_SUBTITLE, HK_RESET, HK_SCREENSHOT,
 	HK_PAUSE, HK_DECREASE_SPEED, HK_INCREASE_SPEED, HK_FRAME_ADVANCE, HK_TURBO,
 	HK_TOGGLE_INPUT_DISPLAY, HK_MOVIE_TOGGLE_RW, HK_MUTE_CAPTURE, HK_QUIT, HK_FA_LAG_SKIP, HK_LAG_COUNTER_DISPLAY,
 	HK_SELECT_STATE_0, HK_SELECT_STATE_1, HK_SELECT_STATE_2, HK_SELECT_STATE_3,
 	HK_SELECT_STATE_4, HK_SELECT_STATE_5, HK_SELECT_STATE_6, HK_SELECT_STATE_7,
 	HK_SELECT_STATE_8, HK_SELECT_STATE_9};
+
+const int HK_MAX = 35;
+
 static const char* HotkeyStrings[HK_MAX] = {
 		"CheatMenu",
 		"BindState",
@@ -26,9 +30,10 @@ static const char* HotkeyStrings[HK_MAX] = {
 		"ToggleBG",
 		"SaveState",
 		"FDSSelect",
-		"FDSEject",
 		"LoadState",
-
+		"FDSEject",
+		"VSInsertCoin",
+		"VSToggleDip",
 		"MovieToggleFrameDisplay",
 		"SubtitleDisplay",
 		"Reset",
